Added initial stuff for a console with console variables 	(the variables will keep the server configuration). Needs still a 	lot of work.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ doc/proposal/simulator3d.aux
 doc/proposal/simulator3d.blg
 doc/proposal/simulator3d.dvi
 doc/proposal/simulator3d.log
+utility/console/Makefile
+utility/console/Makefile.in
