--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,11 @@ doc/proposal/simulator3d.aux
 doc/proposal/simulator3d.blg
 doc/proposal/simulator3d.dvi
 doc/proposal/simulator3d.log
+utility/classserver/.deps
+utility/classserver/.libs
+utility/classserver/Makefile
+utility/classserver/Makefile.in
+utility/classserver/classserver.lo
+utility/classserver/libclassserver.la
 utility/console/Makefile
 utility/console/Makefile.in
