Added initial files for automake/autoconf support

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,25 @@
+/aclocal.m4
+/config.h
+/config.h.in
+/config.log
+/config.status
+/configure
+/libtool
+/Makefile
+/Makefile.in
+/stamp-h1
+doc/Makefile
+doc/Makefile.in
 doc/proposal/auto
+doc/proposal/Makefile
+doc/proposal/Makefile.in
 doc/proposal/simulator3d.bbl
 doc/proposal/simulator3d.aux
 doc/proposal/simulator3d.blg
 doc/proposal/simulator3d.dvi
 doc/proposal/simulator3d.log
+utility/Makefile
+utility/Makefile.in
 utility/classserver/.deps
 utility/classserver/.libs
 utility/classserver/Makefile
