Added a very short example file to demonstrate Forwarder usage.

--- a/utility/forwarder/Makefile.am
+++ b/utility/forwarder/Makefile.am
@@ -1,3 +1,7 @@
 noinst_LIBRARIES = libforwarder.a
 libforwarder_a_SOURCES = forwarder.cc forwarder.h  \
                          forwarderstreambuf.cc forwarderstreambuf.h
+
+noinst_PROGRAMS = example
+example_SOURCES = example.cc
+example_LDADD   = libforwarder.a
