--- a/configure.in
+++ b/configure.in
@@ -15,6 +15,7 @@ AC_LIBTOOL_DLOPEN
 AC_PROG_LIBTOOL
 
 # Checks for libraries.
+AC_SEARCH_LIBS(dlopen, dl)
 
 # Checks for header files.
 AC_HEADER_STDC
