2002-09-26  Oliver Obst  <fruit@robolog.org>
	* ./simulator/Makefile.am
	* ./simulator/example.cc
	Added a thread for the console and a thread for
	the simulation.

--- a/simulator/Makefile.am
+++ b/simulator/Makefile.am
@@ -1,6 +1,14 @@
 SUBDIRS = sensor
 
+AM_CPPFLAGS = \
+-I$(top_srcdir)/utility/mathstuff/ \
+-I$(top_srcdir)/utility/forwarder/ \
+-I$(top_srcdir)/utility/console/
+
 noinst_PROGRAMS = example
 example_SOURCES = example.cc \
 simulator.h simulator.cc
-example_LDADD = -lode
+example_LDADD = -lode -lpthread \
+$(top_srcdir)/utility/console/libconsole.la \
+$(top_srcdir)/utility/forwarder/libforwarder.la \
+$(top_srcdir)/utility/classserver/libclassserver.la
