2002-10-07  Oliver Obst  <fruit@robolog.org>
	* ./configure.in
	Added checks for Perl and dot (for doxygen), and added checks
	for ODE.

	* ./Makefile.am
	* ./doc/Makefile.am
	Added a target to build the doxygen documentation
	("make doc" from the top level).

	* ./simulator/basenode.cc
	* ./simulator/basenode.h
	Added the base node type for the entity tree.

	* ./simulator/dirnode.cc
	* ./simulator/dirnode.h
	Added a node type that can have subnodes.

	* ./simulator/entitytree.cc
	* ./simulator/entitytree.h
	Added an interface to the entity tree (a singleton)

	* ./simulator/example.cc
	* ./simulator/simulator.cc
	* ./simulator/simulator.h
	Extended the example.

	* ./simulator/textures/ground.ppm
	* ./simulator/textures/sky.ppm
	* ./simulator/textures/wood.ppm
	Added the (unfortunately necessary) textures for the ODE
	libdrawstuff sample output.

	* ./simulator/objects/bodynode.cc
	* ./simulator/objects/bodynode.h
	Entity class for an ODE body.

	* ./simulator/objects/geometrynode.cc
	* ./simulator/objects/geometrynode.h
	Base class entity for an ODE geometry.

	* ./simulator/objects/planenode.cc
	* ./simulator/objects/planenode.h
	Entity class for an ODE plane.

	* ./simulator/objects/spherenode.cc
	* ./simulator/objects/spherenode.h
	Entity class for an ODE sphere.

	* ./simulator/objects/worldnode.cc
	* ./simulator/objects/worldnode.h
	Entity class for an ODE world (a node containing a world,
	a space and possibly some subnodes).

	* ./simulator/nodecreator/Makefile.am
	Makefile.am for a nodecreator convenience library.

	* ./simulator/nodecreator/nodecreator.cc
	* ./simulator/nodecreator/nodecreator.h
	Base type for all creator classes. A node creator is
	basically an interface to an object that can create nodes
	in the entity graph.

	* ./simulator/nodecreator/nodecommands.cc
	* ./simulator/nodecreator/nodecommands.h
	Register new creator types to the classserver.

	* ./simulator/nodecreator/dircreator.cc
	* ./simulator/nodecreator/dircreator.h
	Creator to cr

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,6 +3,9 @@ SUBDIRS = doc utility simulator
 pkginclude_HEADERS = \
 config.h
 
+doc:	
+	cd doc && $(MAKE) all doxygen-doc
+
 release:	update distcheck add_rel commit upload tag commit
 
 quick-release:	update add_rel commit upload tag commit
