--- a/configure.in
+++ b/configure.in
@@ -9,6 +9,9 @@ AC_LANG(C++)
 # Checks for programs.
 AC_PROG_CC
 AC_PROG_CXX
+AC_ARG_VAR([PERL], [Perl interpreter command])
+AC_PATH_PROG([PERL], [perl])
+AC_CHECK_PROG([HAVE_DOT], [dot], [YES], [NO])
 # the ClassServer probably wants to dlopen other libraries later on
 AC_LIBTOOL_DLOPEN
 # use libtool for linking
@@ -18,6 +21,7 @@ AC_PROG_LIBTOOL
 AC_CHECK_LIB(ode, dWorldCreate, true, 
   AC_MSG_ERROR([your system fails at linking a small ODE application!
 Install ODE on your system and try again.]))
+
 AC_SEARCH_LIBS(dlopen, dl)
 
 # Checks for header files.
@@ -25,6 +29,10 @@ AC_HEADER_STDC
 ## originally in check_header: stdlib.h string.h unistd.h 
 ## but do we really need this?
 AC_CHECK_HEADERS([streambuf])
+AC_CHECK_HEADER([ode.h],,
+  AC_MSG_ERROR([failure to include the ode header. Please install ODE
+	          and/or set the CPPFLAGS environment variable to include
+		  the directory where ode.h is located]))
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
@@ -38,12 +46,14 @@ AC_FUNC_VPRINTF
 AC_CHECK_FUNCS([memmove memset strrchr])
 
 AC_CONFIG_FILES([Makefile \
+		 doc/Doxyfile \
 	         doc/Makefile \
 		 doc/proposal/Makefile \
 		 utility/Makefile \
 		 utility/classserver/Makefile \
 		 utility/console/Makefile \
 		 utility/forwarder/Makefile \
-         simulator/Makefile \
-         simulator/sensor/Makefile])
+	         simulator/Makefile \
+	         simulator/nodecreator/Makefile \
+        	 simulator/sensor/Makefile])
 AC_OUTPUT
