2002-12-11	Tom Howard	<tomhoward@users.sf.net>
	* ./Makefile.am
	Fixed bug in branching targets

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,20 +7,24 @@ doc:
 	cd doc && $(MAKE) all doxygen-doc
 
 branch-major: commit
-	ver=`echo "@VERSION@" | sed /\\\\.[0-9][0-9]*\\\\.[0-9][0-9]*$//`; \
+	ver=`echo "@VERSION@" | sed s/\\\\.[0-9][0-9]*\\\\.[0-9][0-9]*$$//`; \
 	tag=`echo "@PACKAGE@-$$ver"`; \
+	echo ""; \
 	echo "Creating major brach: $$tag"; \
 	echo "Use 'cvs co -r $$tag @PACKAGE@' to access the branch"; \
+	echo ""; \
 	echo `cvs tag -b $$tag`; \
 	$(AWK) -f @srcdir@/rel.awk -v change=1 @srcdir@/configure.in > configure.tmp;
 	mv configure.tmp @srcdir@/configure.in
 	$(MAKE) $(AM_MAKEFLAGS) commit
 
 branch-minor: commit
-	ver=`echo "@VERSION@" | sed /\\\\.[0-9][0-9]*$//`; \
+	ver=`echo "@VERSION@" | sed s/\\\\.[0-9][0-9]*$$//`; \
 	tag=`echo "@PACKAGE@-$$ver" | sed s/\\\\./_/g`; \
+	echo ""; \
 	echo "Creating minor brach: $$tag"; \
-	echo "Use 'cvs co -r $$tag @PACKAGE@' to access the branch"; \
+	echo "Use 'cvs co -r $$tag @PACKAGE@' to access the branch"; 
+	echo ""; \
 	echo `cvs tag -b $$tag`; \
 	$(AWK) -f @srcdir@/rel.awk -v change=2 @srcdir@/configure.in > configure.tmp;
 	mv configure.tmp @srcdir@/configure.in
