added some .cvsignore files

--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,32 @@ doc/proposal/simulator3d.aux
 doc/proposal/simulator3d.blg
 doc/proposal/simulator3d.dvi
 doc/proposal/simulator3d.log
+lib/Makefile
+lib/Makefile.in
 lib/salt/.deps
 lib/salt/.libs
 lib/salt/Makefile.in
 lib/salt/Makefile
 lib/salt/*.la
 lib/salt/*.lo
+lib/zeitgeist/.deps
+lib/zeitgeist/.libs
+lib/zeitgeist/Makefile
+lib/zeitgeist/Makefile.in
+lib/zeitgeist/*.la
+lib/zeitgeist/*.lo
+lib/zeitgeist/fileserver/.deps
+lib/zeitgeist/fileserver/.dirstamp
+lib/zeitgeist/fileserver/.libs
+lib/zeitgeist/fileserver/*.la
+lib/zeitgeist/fileserver/*.lo
+lib/zeitgeist/logserver/.deps
+lib/zeitgeist/logserver/.dirstamp
+lib/zeitgeist/logserver/.libs
+lib/zeitgeist/logserver/*.la
+lib/zeitgeist/logserver/*.lo
+lib/zeitgeist/scriptserver/.deps
+lib/zeitgeist/scriptserver/.dirstamp
+lib/zeitgeist/scriptserver/.libs
+lib/zeitgeist/scriptserver/*.la
+lib/zeitgeist/scriptserver/*.lo
