--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT(rcssserver3d, 0.1, fruit@robolog.org)
+AC_INIT([rcssserver3d],[0.1],[fruit@robolog.org])
 AC_CONFIG_SRCDIR([plugin/inputsdl/keyboardsdl_c.cpp])
 AC_CONFIG_HEADER([config.h])
 AC_CONFIG_AUX_DIR([config.aux])
@@ -23,7 +23,6 @@ AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_LIBTOOL
 AC_PROG_AWK
-AC_PROG_RANLIB
 
 # Checks for libraries.
 
