configure should create the doc/Doxyfile from doc/Doxyfile.in

--- a/configure.ac
+++ b/configure.ac
@@ -72,5 +72,6 @@ AC_CONFIG_FILES([Makefile \
 		 lib/Makefile \
 		 lib/salt/Makefile \
 		 lib/zeitgeist/Makefile \
-		 lib/kerosin/Makefile])
+		 lib/kerosin/Makefile \
+		 doc/Doxyfile])
 AC_OUTPUT
