added a top level glextgen ruby script template from which configure can create an instance of the script which fits to the actual system

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ lib/zeitgeist/scriptserver/.dirstamp
 lib/zeitgeist/scriptserver/.libs
 lib/zeitgeist/scriptserver/*.la
 lib/zeitgeist/scriptserver/*.lo
+utility/glextgen/Makefile
+utility/glextgen/Makefile.in
+utility/glextgen/glextgen.rb
