*** empty log message ***

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,8 @@ lib/zeitgeist/scriptserver/.dirstamp
 lib/zeitgeist/scriptserver/.libs
 lib/zeitgeist/scriptserver/*.la
 lib/zeitgeist/scriptserver/*.lo
+utility/Makefile.in
+utility/Makefile
 utility/glextgen/Makefile
 utility/glextgen/Makefile.in
 utility/glextgen/glextgen.rb
