Updated Makefile.am so that building the doxygen doc is done by the 'all' target. The existing developers documentation is copied into a subdirectory of the generated html directory so that the generated main page can link to it.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,2 +1,13 @@
-doxygen-doc:
+all-local: Doxyfile
 	doxygen Doxyfile
+	rm -rf $(srcdir)/html/developers
+	mkdir --parents $(srcdir)/html/developers
+	cp *.html html/developers
+
+install-data-local:
+	$(mkinstalldirs) $(DESTDIR)$(pkgdatadir)/html
+	$(INSTALL_DATA) $(srcdir)/html/* $(DESTDIR)$(pkgdatadir)/html/
+
+maintainer-clean-local:
+	rm -rf html
+	rm -rf *~
